--- a/src/styles/BlogDetail.css
+++ b/src/styles/BlogDetail.css
@@ -20,6 +20,46 @@
   margin: 5px 0 20px 0;
 }
 
+.buttons {
+  display: flex;
+}
+
+.edit-btn {
+  margin-right: 10px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.modal-body {
+  background-color: #fff;
+  max-width: 450px;
+  width: 90vw;
+  padding: 0 20px;
+  border-radius: 10px;
+  position: relative;
+  z-index: 99;
+}
+
+.close-modal-btn {
+  position: absolute;
+  top: 5%;
+  right: 3%;
+  font-size: 30px;
+  display: grid;
+  place-items: center;
+  padding: 2px;
+}
+
 @media (max-width: 768px) {
   .Blog .title {
     padding: 0;
