--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -53,7 +53,7 @@ nav {
   }
   .links {
     margin-top: 5px;
-    transition: all 0.3s linear;
+    transition: all 0.3s ease;
     height: 0;
     overflow: hidden;
   }
