--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,13 +13,13 @@ body {
 .App {
   display: flex;
   flex-direction: column;
-  /* min-height: 100vh; */
+  min-height: 100vh;
 }
 
 .container {
   max-width: 998px;
   width: 90vw;
-  margin: auto;
+  margin: 0 auto;
 }
 
 a {
