replaced fetch() with axios

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -20,6 +20,10 @@
   cursor: pointer;
 }
 
+.SingleBlog .blog-title {
+  text-transform: capitalize;
+}
+
 .SingleBlog:hover {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
